--- a/package.json
+++ b/package.json
@@ -3,31 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@blockfrost/blockfrost-js": "^6.0.0",
-    "buffer": "^6.0.3",
     "canvas-confetti": "^1.9.3",
-    "crypto-browserify": "^3.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-app-rewired": "^2.2.1",
-    "stream-browserify": "^3.0.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
